# Operator

./: .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_REPORT_2026-04-20.md  PHASE4_README.md  README.md  SKILLS_SYSTEM_GUIDE.md  jarvis_blueprint.json  jarvis_recreation_blueprint.json  launcher.py  next_project_text.txt  package-lock.json  package.json  start_homelab.bat  start_operator.bat  start_operator_hidden.vbs  start_operator_silent.ps1  start_small.bat  tasks.md  test_model_selection.py  things_to_fix.md  thingstoimplemnt  update_samsung_device.py
.claude/: settings.local.json
.obsidian/: graph.json  workspace.json
backend/: .env  config.json  config.py  conversation_summarizer.py  decision_engine.py  face_recognition.py  google_workspace.py  list_gemini_models.py  memory.py  notifier.py  paths.py  project_launcher.py  rag_memory.py  remote_admin.py  remote_bridge.py  remote_devices.json  requirements.txt  server.py  server_legacy.py  setup_vault.py  skill_analytics.py  skill_chaining.py  skill_context.py  skill_creator.py  skill_learning.py  skill_multimodal.py  skill_scheduler.py  skill_sharing.py  skills.py  skills_api.py  skills_engine.py  sleep_manager.py  telegram_config.json  test_gemini_safety.py  tool_executor.py  training_engine.py  tray.py  vault_rag.py  voice_service.py  watcher.py  (+1 more)
database/: errors.db
docs/: PHONE_SETUP.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src-tauri/: Cargo.toml  create_icon.py  tauri.conf.json
frontend/src-tauri/src/: main.rs
(+60 files in other folders)
